Adding more documentation to grid

--- a/lib/jade/_header.jade
+++ b/lib/jade/_header.jade
@@ -7,10 +7,10 @@
         li
           a(href="/") Home
         li
-          a(href="/docs/3.x/") Docs
+          a(href="/docs/#{docsVersion}/") Docs
 
       ul
         li
-          a.button.button-primary(href="/docs/3.x/" role="button")
+          a.button.button-primary(href="/docs/#{docsVersion}/" role="button")
             span.fa.fa-cloud-download
             |  Download
