--- a/lib/jade/docs/3.x/_header.jade
+++ b/lib/jade/docs/3.x/_header.jade
@@ -2,33 +2,33 @@
   .container
     nav
       ul
-        li: a(href="/docs/3.x") Quickstart
-        li: a(href="/docs/3.x/theming/") Theming
-        li: a(href="/docs/3.x/grid/") Grid
-        li 
+        li: a(href="/docs/#{docsVersion}") Quickstart
+        li: a(href="/docs/#{docsVersion}/theming/") Theming
+        li: a(href="/docs/#{docsVersion}/grid/") Grid
+        li
           | UI
           ul
-            li: a(href="/docs/3.x/ui/") Layout and CSS
-            li: a(href="/docs/3.x/ui/alerts") Alerts
-            li: a(href="/docs/3.x/ui/buttons") Buttons
-            li: a(href="/docs/3.x/ui/forms") Forms
-            li: a(href="/docs/3.x/ui/icons") Icons
-            li: a(href="/docs/3.x/ui/images") Images
-            li: a(href="/docs/3.x/ui/labels") Labels
-            li: a(href="/docs/3.x/ui/modals") Modals
-            li: a(href="/docs/3.x/ui/navigation") Navigation
-            li: a(href="/docs/3.x/ui/notifications") Notifications
-            li: a(href="/docs/3.x/ui/tables") Tables
-            li: a(href="/docs/3.x/ui/tabs") Tabs
-            li: a(href="/docs/3.x/ui/tiles") Tiles
-            li: a(href="/docs/3.x/ui/tooltips") Tooltips
-            li: a(href="/docs/3.x/ui/typography") Typography
+            li: a(href="/docs/#{docsVersion}/ui/") Layout and CSS
+            li: a(href="/docs/#{docsVersion}/ui/alerts") Alerts
+            li: a(href="/docs/#{docsVersion}/ui/buttons") Buttons
+            li: a(href="/docs/#{docsVersion}/ui/forms") Forms
+            li: a(href="/docs/#{docsVersion}/ui/icons") Icons
+            li: a(href="/docs/#{docsVersion}/ui/images") Images
+            li: a(href="/docs/#{docsVersion}/ui/labels") Labels
+            li: a(href="/docs/#{docsVersion}/ui/modals") Modals
+            li: a(href="/docs/#{docsVersion}/ui/navigation") Navigation
+            li: a(href="/docs/#{docsVersion}/ui/notifications") Notifications
+            li: a(href="/docs/#{docsVersion}/ui/tables") Tables
+            li: a(href="/docs/#{docsVersion}/ui/tabs") Tabs
+            li: a(href="/docs/#{docsVersion}/ui/tiles") Tiles
+            li: a(href="/docs/#{docsVersion}/ui/tooltips") Tooltips
+            li: a(href="/docs/#{docsVersion}/ui/typography") Typography
         li
           | Functions
           ul
-            li: a(href="/docs/3.x/functions/throttling") Throttling
-            li: a(href="/docs/3.x/functions/extend") Extend
-        li: a(href="/docs/3.x/philosophy/") Philosophy
+            li: a(href="/docs/#{docsVersion}/functions/throttling") Throttling
+            li: a(href="/docs/#{docsVersion}/functions/extend") Extend
+        li: a(href="/docs/#{docsVersion}/philosophy/") Philosophy
 
       ul
         li
@@ -36,7 +36,7 @@
           ul
             li: a(href="http://getkickstrap.com.s3-website-us-east-1.amazonaws.com/1.x/") 1.5.0
             li: a(href="http://getkickstrap.com.s3-website-us-east-1.amazonaws.com/2.x/") 2.0.8
-            li: a(href="/docs/3.x") #{currentVersion} (current)
+            li: a(href="/docs/#{docsVersion}") #{currentVersion} (current)
             li: a(href="/docs/4.x") 4 (Future plans)
         li(style="display: none")
           ul.button-group(role="button")
