--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -22,7 +22,7 @@ block mainpane
     .more
       :markdown
         ## Feature-forward
-        Kickstart targets the most modern browsers at the time of release. This means we've skipped over the hacks and headed straight to exciting components like using CSS flexbox for the [grid](/docs/3.x/grid/).
+        Kickstart targets the most modern browsers at the time of release. This means we've skipped over the hacks and headed straight to exciting components like using CSS flexbox for the [grid](/docs/#{docsVersion}/grid/).
 
         ## Second thing
         Second thing
@@ -35,7 +35,7 @@ block mainpane
 
     * X% smaller than Bootstrap, X% smaller than Foundation
     * Option to decouple css library from classes
-      * Can be used with functional, presentational, or content-based 
+      * Can be used with functional, presentational, or content-based
     * Not dependent on any JS libraries, including jQuery
 
 
