--- a/lib/sass/core/_mixins.sass
+++ b/lib/sass/core/_mixins.sass
@@ -1,9 +1,9 @@
 =alternate-headings
   h1
-    +xs-heading
+    +heading-xs
 
   h2, h3, h4, h5
-    +xxs-heading
+    +xheading-xs
 
 =text-inputs
   input[type="date"],
