--- a/lib/sass/core/_typography.sass
+++ b/lib/sass/core/_typography.sass
@@ -79,17 +79,17 @@ a
     color: inherit
 
   h1
-    +xxl-heading
+    +heading-xxl
   h2
-    +xl-heading
+    +heading-xl
   h3
-    +lg-heading
+    +heading-lg
   h4
-    +md-heading
+    +heading-md
   h5
-    +rg-heading
+    +heading-rg
   h6
-    +sm-heading
+    +heading-sm
 
   > img
     margin: 0px auto
@@ -106,49 +106,49 @@ a
     border-bottom: 1px solid map-get($white, darker)
     padding-bottom: $space/2
 
-=xxl-heading-default
+=heading-xxl-default
   font-size: 3rem
   margin:
     bottom: 1.65rem
   +heading-break
 
-=xl-heading-default
+=heading-xl-default
   font-size: 2.7rem
   margin:
     bottom: 1.5rem
   +heading-break
 
-=lg-heading-default
+=heading-lg-default
   font-size: 2.4rem
   margin:
     bottom: 1.25rem
   +heading-break
 
-=md-heading-default
+=heading-md-default
   font-size: 2.1rem
   margin:
     bottom: 1.15rem
   +heading-break
 
-=rg-heading-default
+=heading-rg-default
   font-size: 1.8rem
   margin:
     bottom: 1rem
   +heading-break
 
-=sm-heading-default
+=heading-sm-default
   font-size: 1.5rem
   margin:
     bottom: 0.85rem
   +heading-break
 
-=xs-heading-default
+=heading-xs-default
   font-size: 1.2rem
   margin:
     bottom: 0.7rem
   +heading-break
 
-=xxs-heading-default
+=xheading-xs-default
   font-size: 0.9rem
   margin:
     bottom: 0.5rem
