--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -270,28 +270,28 @@ table
 // ----------
 
 .xxl
-  +xxl-heading
+  +heading-xxl
 
 .xl
-  +xl-heading
+  +heading-xl
 
 .lg
-  +lg-heading
+  +heading-lg
 
 .md
-  +md-heading
+  +heading-md
 
 .rg
-  +rg-heading
+  +heading-rg
 
 .sm
-  +sm-heading
+  +heading-sm
 
 .xs
-  +xs-heading
+  +heading-xs
 
 .xxs
-  +xxs-heading
+  +xheading-xs
 
 .readable
   +p(true)
