--- a/lib/sass/themes/_shabbychic.sass
+++ b/lib/sass/themes/_shabbychic.sass
@@ -77,50 +77,50 @@ pre
 =hero
   +hero-default
 
-=xxl-heading
-  +xxl-heading-default
+=heading-xxl
+  +heading-xxl-default
 
-=xl-heading
-  +xl-heading-default
+=heading-xl
+  +heading-xl-default
 
-=lg-heading
-  +lg-heading-default
+=heading-lg
+  +heading-lg-default
 
-=md-heading
-  +md-heading-default
+=heading-md
+  +heading-md-default
 
-=rg-heading
-  +rg-heading-default
+=heading-rg
+  +heading-rg-default
 
-=sm-heading
-  +sm-heading-default
+=heading-sm
+  +heading-sm-default
 
-=xs-heading
-  +xs-heading-default
+=heading-xs
+  +heading-xs-default
 
-=xxs-heading
-  +xxs-heading-default
+=xheading-xs
+  +xheading-xs-default
 
 h1, h2, h3, h4, h5, h6
   font-family: $heading-font-family
 
 h1
-  +lg-heading
+  +heading-lg
 
 h2
-  +md-heading
+  +heading-md
 
 h3
-  +rg-heading
+  +heading-rg
 
 h4
-  +sm-heading
+  +heading-sm
 
 h5
-  +xs-heading
+  +heading-xs
 
 h6
-  +xxs-heading
+  +xheading-xs
 
 =type
   +type-default
