--- a/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
@@ -1,4 +1,4 @@
-=button-default($color, $size: 1)
+=button-default($color: $secondary-color, $size: 1)
   display: inline-block
   cursor: pointer
   text-decoration: none
