Adding classes for mobile grid components

--- a/lib/jade/docs/3.x/grid/index.jade
+++ b/lib/jade/docs/3.x/grid/index.jade
@@ -18,6 +18,12 @@ block toc-variations
       a(href="#responsive") Responsive
 
 block basic
+
+  .example
+    .row
+      .test-a: .col-example foo
+      .col.col-third.col-pull-xs-1.col-pull-rg-3: .col-example foo
+
   .example
     .row
       .col-third
