--- a/lib/sass/core/_grid.sass
+++ b/lib/sass/core/_grid.sass
@@ -46,13 +46,41 @@ $grid-gutter: 15px
   align-items: stretch
   flex-wrap: wrap
 
+=set-offset($columns, $type: 'push')
+  @if $type == 'push'
+    @media screen and (min-width: $desktop)
+      margin-right: calc(#{percentage($columns/$grid-columns)} + #{$grid-gutter})
+  @else if $type == 'pull'
+    @media screen and (min-width: $desktop)
+      margin-left: calc(#{percentage($columns/$grid-columns)} + #{$grid-gutter})
+
 =push($columns)
-  @media screen and (min-width: $desktop)
-    margin-right: calc(#{percentage($columns/$grid-columns)} + #{$grid-gutter})
+  @if $columns == "half"
+    +set-offset(6)
+  @else if $columns == "third"
+    @media screen and (min-width: $tablet)
+      +set-offset(6)
+    +set-offset(4)
+  @else if $columns == "twothirds"
+    @media screen and (min-width: $tablet)
+      +set-offset(6)
+    +set-offset(4)
+  @else
+    +set-offset($columns)
 
 =pull($columns)
-  @media screen and (min-width: $desktop)
-    margin-left: calc(#{percentage($columns/$grid-columns)} + #{$grid-gutter})
+  @if $columns == "half"
+    +set-offset(6, 'pull')
+  @else if $columns == "third"
+    @media screen and (min-width: $tablet)
+      +set-offset(6, 'pull')
+    +set-offset(4, 'pull')
+  @else if $columns == "twothirds"
+    @media screen and (min-width: $tablet)
+      +set-offset(6, 'pull')
+    +set-offset(4, 'pull')
+  @else
+    +set-offset($columns, 'pull')
 
 =set-column($columns, $pull, $push)
   width: 100%
@@ -63,27 +91,27 @@ $grid-gutter: 15px
     width: calc(#{percentage($columns/$grid-columns)} - #{$grid-gutter})
     clear: none
 
-  @if $pull > 0
+  @if $pull != 0
     +pull($pull)
 
-  @if $push > 0
+  @if $pull != 0
     +push($push)
 
 =column($columns: 12, $pull: 0, $push: 0)
   +set-column(12, 0, 0)
   @if $columns == "half"
     @media screen and (min-width: $tablet)
-      +set-column($grid-columns/2, 0, 0)
+      +set-column($grid-columns/2, $pull, $push)
   @else if $columns == "third"
     @media screen and (min-width: $phablet)
-      +set-column($grid-columns/2, 0, 0)
+      +set-column($grid-columns/2, $pull, $push)
     @media screen and (min-width: $tablet)
-      +set-column($grid-columns/3, 0, 0)
+      +set-column($grid-columns/3, $pull, $push)
   @else if $columns == "twothirds"
     @media screen and (min-width: $phablet)
-      +set-column($grid-columns/2, 0, 0)
+      +set-column($grid-columns/2, $pull, $push)
     @media screen and (min-width: $tablet)
-      +set-column(($grid-columns * 2/3), 0, 0)
+      +set-column(($grid-columns * 2/3), $pull, $push)
   @else
     @media screen and (min-width: $tablet)
       +set-column($columns, $pull, $push)
