--- a/lib/jade/docs/3.x/grid/index.jade
+++ b/lib/jade/docs/3.x/grid/index.jade
@@ -19,7 +19,7 @@ block toc-variations
 
 block basic
 
-  .example
+  .example(style="display: none")
     .row
       .test-a: .col-example foo
       .col.col-third.col-pull-xs-1.col-pull-rg-3: .col-example foo
