Wrapping up some quick things

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -38,6 +38,9 @@ block mainpane
       * Can be used with functional, presentational, or content-based
     * Not dependent on any JS libraries, including jQuery
 
+    ### CDN provided by
+    <img src="/img/maxcdn.png" style="width: 150px"/>
+
 
 block sidebar
   h1 Table of Contents
