Cleaning up grid

--- a/lib/jade/docs/3.x/grid/index.jade
+++ b/lib/jade/docs/3.x/grid/index.jade
@@ -172,6 +172,57 @@ block basic
           </div>
 
 block variations
+  h2 More examples
+  .example
+    .row
+      .col-3: .col-example 3 columns
+      .col-6: .col-example 6 columns
+      .col-3: .col-example 3 columns
+
+    .row
+      .col-6: .col-example 6 columns
+      .col-6: .col-example 6 columns
+
+    .row
+      .col-3: .col-example 3 columns
+      .col-9: .col-example 9 columns
+
+    .row
+      .col-3: .col-example 3 columns
+      .col-3.col-pull-6: .col-example 3 columns, 6 column pull
+
+    .row
+      .col-6.col-push-6: .col-example 6 columns, 6 column push
+
+    .row
+      .col-6: .col-example 6 columns
+
+    .row
+      .col-9.col-pull-3: .col-example 9 columns, 3 column pull
+
+    .row
+      .col-4: .col-example 4 columns
+      .col-4: .col-example 4 columns
+      .col-4: .col-example 4 columns
+
+    .row
+      .col-4.col-pull-4.col-push-4: .col-example 4 columns, 4 column pull, 4 column push
+
+    .row
+      .col-4.col-push-4: .col-example 4 columns, 4 column push
+
+    .row
+      .col-4.col-pull-4: .col-example 4 columns, 4 column pull
+
+    .row
+      .col-6: .col-example 6 columns
+      .col-6: .col-example 6 columns
+      .col-6: .col-example 6 columns
+      .col-6: .col-example 6 columns
+
+    .row
+      .col-12: .col-example 12 columns
+
   h2 Pulls
 
   .example
