Fixed widths but pulls and pushes will need some help

--- a/lib/jade/docs/3.x/grid/index.jade
+++ b/lib/jade/docs/3.x/grid/index.jade
@@ -176,6 +176,12 @@ block variations
   .example
     .row
       .col-3: .col-example 3 columns
+      .col-3: .col-example 3 columns
+      .col-3: .col-example 3 columns
+      .col-3: .col-example 3 columns
+
+    .row
+      .col-3: .col-example 3 columns
       .col-6: .col-example 6 columns
       .col-3: .col-example 3 columns
 
