--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -166,10 +166,10 @@
     &.col-pull-#{$screen}third
       +pull('third')
 
-    &.col-push-#{$screen}twothirds
+    &.col-pull-#{$screen}twothirds
       +pull('twothirds')
 
-    &.col-push-#{$screen}half
+    &.col-pull-#{$screen}half
       +pull('half')
 
     @for $i from 1 through 12
